--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
   "dependencies": {
     "add": "^2.0.6",
     "classnames": "^2.2.6",
+    "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
     "smoothscroll-polyfill": "^0.4.4"
   }
